@@ -5,20 +5,22 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+import org.jabref.architecture.AllowedToUseLogic;
 import org.jabref.logic.layout.LayoutFormatterPreferences;
+import org.jabref.logic.util.OS;
 import org.jabref.model.entry.BibEntry;
 import org.jabref.model.entry.field.StandardField;
-import org.jabref.model.util.FileHelper;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.ValueSource;
 import org.mockito.Answers;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -29,6 +31,7 @@ import static org.junit.jupiter.api.Assertions.assertNotEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.mock;
 
+@AllowedToUseLogic("uses OS from logic package")
 class FileUtilTest {
     private static final Logger LOGGER = LoggerFactory.getLogger(FileUtilTest.class);
 
@@ -148,47 +151,47 @@ class FileUtilTest {
 
     @Test
     void testGetFileExtensionSimpleFile() {
-        assertEquals("pdf", FileHelper.getFileExtension(Path.of("test.pdf")).get());
+        assertEquals("pdf", FileUtil.getFileExtension(Path.of("test.pdf")).get());
     }
 
     @Test
     void testGetFileExtensionMultipleDotsFile() {
-        assertEquals("pdf", FileHelper.getFileExtension(Path.of("te.st.PdF")).get());
+        assertEquals("pdf", FileUtil.getFileExtension(Path.of("te.st.PdF")).get());
     }
 
     @Test
     void testGetFileExtensionNoExtensionFile() {
-        assertFalse(FileHelper.getFileExtension(Path.of("JustTextNotASingleDot")).isPresent());
+        assertFalse(FileUtil.getFileExtension(Path.of("JustTextNotASingleDot")).isPresent());
     }
 
     @Test
     void testGetFileExtensionNoExtension2File() {
-        assertFalse(FileHelper.getFileExtension(Path.of(".StartsWithADotIsNotAnExtension")).isPresent());
+        assertFalse(FileUtil.getFileExtension(Path.of(".StartsWithADotIsNotAnExtension")).isPresent());
     }
 
     @Test
     void getFileExtensionWithSimpleString() {
-        assertEquals("pdf", FileHelper.getFileExtension("test.pdf").get());
+        assertEquals("pdf", FileUtil.getFileExtension("test.pdf").get());
     }
 
     @Test
     void getFileExtensionTrimsAndReturnsInLowercase() {
-        assertEquals("pdf", FileHelper.getFileExtension("test.PdF  ").get());
+        assertEquals("pdf", FileUtil.getFileExtension("test.PdF  ").get());
     }
 
     @Test
     void getFileExtensionWithMultipleDotsString() {
-        assertEquals("pdf", FileHelper.getFileExtension("te.st.PdF  ").get());
+        assertEquals("pdf", FileUtil.getFileExtension("te.st.PdF  ").get());
     }
 
     @Test
     void getFileExtensionWithNoDotReturnsEmptyExtension() {
-        assertEquals(Optional.empty(), FileHelper.getFileExtension("JustTextNotASingleDot"));
+        assertEquals(Optional.empty(), FileUtil.getFileExtension("JustTextNotASingleDot"));
     }
 
     @Test
     void getFileExtensionWithDotAtStartReturnsEmptyExtension() {
-        assertEquals(Optional.empty(), FileHelper.getFileExtension(".StartsWithADotIsNotAnExtension"));
+        assertEquals(Optional.empty(), FileUtil.getFileExtension(".StartsWithADotIsNotAnExtension"));
     }
 
     @Test
@@ -203,17 +206,31 @@ class FileUtilTest {
 
     @Test
     void uniquePathSubstrings() {
-        String[] pathArr = {Path.of("C:/uniquefile.bib").toString(),
-                Path.of("C:/downloads/filename.bib").toString(), Path.of("C:/mypaper/bib/filename.bib").toString(),
-                Path.of("C:/external/mypaper/bib/filename.bib").toString(), ""};
-        String[] uniqArr = {Path.of("uniquefile.bib").toString(), Path.of("downloads/filename.bib").toString(),
-                Path.of("C:/mypaper/bib/filename.bib").toString(),
-                Path.of("external/mypaper/bib/filename.bib").toString(), ""};
-        List<String> paths = Arrays.asList(pathArr);
-        List<String> uniqPath = Arrays.asList(uniqArr);
+       List<String> paths = List.of("C:/uniquefile.bib",
+               "C:/downloads/filename.bib",
+               "C:/mypaper/bib/filename.bib",
+               "C:/external/mypaper/bib/filename.bib",
+               "");
+        List<String> uniqPath = List.of("uniquefile.bib",
+              "downloads/filename.bib",
+              "C:/mypaper/bib/filename.bib",
+              "external/mypaper/bib/filename.bib",
+              "");
 
         List<String> result = FileUtil.uniquePathSubstrings(paths);
         assertEquals(uniqPath, result);
+    }
+
+    @Test
+    void testUniquePathFragmentWithSameSuffix() {
+        List<String> dirs = List.of("/users/jabref/bibliography.bib", "/users/jabref/koppor-bibliograsphy.bib");
+        assertEquals(Optional.of("bibliography.bib"), FileUtil.getUniquePathFragment(dirs, Path.of("/users/jabref/bibliography.bib")));
+    }
+
+    @Test
+    void testUniquePathFragmentWithSameSuffixAndLongerName() {
+        List<String> dirs = List.of("/users/jabref/bibliography.bib", "/users/jabref/koppor-bibliography.bib");
+        assertEquals(Optional.of("koppor-bibliography.bib"), FileUtil.getUniquePathFragment(dirs, Path.of("/users/jabref/koppor-bibliography.bib")));
     }
 
     @Test
@@ -338,15 +355,90 @@ class FileUtilTest {
 
     @Test
     void testFindinPath() {
-        Optional<Path> resultPath1 = FileUtil.find("existingTestFile.txt", rootDir);
+        Optional<Path> resultPath1 = FileUtil.findSingleFileRecursively("existingTestFile.txt", rootDir);
         assertEquals(resultPath1.get().toString(), existingTestFile.toString());
     }
 
     @Test
     void testFindInListOfPath() {
+        // due to the added workaround for old JabRef behavior as both path starts with the same name they are considered equal
         List<Path> paths = List.of(existingTestFile, otherExistingTestFile, rootDir);
-        List<Path> resultPaths = List.of(existingTestFile, existingTestFile);
-        List<Path> result = FileUtil.find("existingTestFile.txt", paths);
+        List<Path> resultPaths = List.of(existingTestFile);
+        List<Path> result = FileUtil.findListOfFiles("existingTestFile.txt", paths);
         assertEquals(resultPaths, result);
+    }
+
+    @Test
+    public void extractFileExtension() {
+        final String filePath = FileUtilTest.class.getResource("pdffile.pdf").getPath();
+        assertEquals(Optional.of("pdf"), FileUtil.getFileExtension(filePath));
+    }
+
+    @Test
+    public void fileExtensionFromUrl() {
+        final String filePath = "https://link.springer.com/content/pdf/10.1007%2Fs40955-018-0121-9.pdf";
+        assertEquals(Optional.of("pdf"), FileUtil.getFileExtension(filePath));
+    }
+
+    @Test
+    public void testFileNameEmpty() {
+        Path path = Path.of("/");
+        assertEquals(Optional.of(path), FileUtil.find("", path));
+    }
+
+    @ParameterizedTest
+    @ValueSource(strings = {"*", "?", ">", "\""})
+    public void testFileNameIllegal(String fileName) {
+        Path path = Path.of("/");
+        assertEquals(Optional.empty(), FileUtil.find(fileName, path));
+    }
+
+    @Test
+    public void testFindsFileInDirectory(@TempDir Path temp) throws Exception {
+        Path firstFilePath = temp.resolve("files");
+        Files.createDirectories(firstFilePath);
+        Path firstFile = Files.createFile(firstFilePath.resolve("test.pdf"));
+
+        assertEquals(Optional.of(firstFile), FileUtil.find("test.pdf", temp.resolve("files")));
+    }
+
+    @Test
+    public void testFindsFileStartingWithTheSameDirectory(@TempDir Path temp) throws Exception {
+        Path firstFilePath = temp.resolve("files");
+        Files.createDirectories(firstFilePath);
+        Path firstFile = Files.createFile(firstFilePath.resolve("test.pdf"));
+
+        assertEquals(Optional.of(firstFile), FileUtil.find("files/test.pdf", temp.resolve("files")));
+    }
+
+    @Test
+    public void testDoesNotFindsFileStartingWithTheSameDirectoryHasASubdirectory(@TempDir Path temp) throws Exception {
+        Path firstFilesPath = temp.resolve("files");
+        Path secondFilesPath = firstFilesPath.resolve("files");
+        Files.createDirectories(secondFilesPath);
+        Path testFile = secondFilesPath.resolve("test.pdf");
+        Files.createFile(testFile);
+        assertEquals(Optional.of(testFile.toAbsolutePath()), FileUtil.find("files/test.pdf", firstFilesPath));
+    }
+
+    public void testCTemp() {
+        String fileName = "c:\\temp.pdf";
+        if (OS.WINDOWS) {
+            assertFalse(FileUtil.detectBadFileName(fileName));
+        } else {
+            assertTrue(FileUtil.detectBadFileName(fileName));
+        }
+    }
+
+    @ParameterizedTest
+    @ValueSource(strings = {"/mnt/tmp/test.pdf"})
+    public void legalPaths(String fileName) {
+        assertFalse(FileUtil.detectBadFileName(fileName));
+    }
+
+    @ParameterizedTest
+    @ValueSource(strings = {"te{}mp.pdf"})
+    public void illegalPaths(String fileName) {
+        assertTrue(FileUtil.detectBadFileName(fileName));
     }
 }
